[package]
name = "ping-log"
version = "0.4.0"
authors = ["Lars Wrenger <lars@wrenger.net>"]
description = "Simple RESTful webserver for logging and visualizing network access times."
repository = "https://gitlab.com/wrenger/rust-ping-log"
keywords = ["ping", "log", "webserver", "REST"]
categories = ["webserver"]
readme = "README.md"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2", default-features = false, features = ["derive", "std"] }
regex = "1.6"
lazy_static = "1.4"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", default-features = false, features = ["compression"] }
