[package]
name = "ping-log"
version = "0.4.2"
authors = ["Lars Wrenger <lars@wrenger.net>"]
description = "Simple RESTful webserver for logging and visualizing network access times."
repository = "https://gitlab.com/wrenger/rust-ping-log"
keywords = ["ping", "log", "webserver", "REST"]
categories = ["webserver"]
readme = "README.md"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = [
    "http1",
    "json",
    "query",
    "tokio",
    "tower-log",
    "tracing",
] }
chrono = "0.4"
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
] }
libc = "0.2"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = [
    "fs",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = [
    "fs",
    "trace",
    "compression-deflate",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
