[package]
name = "ping-log"
version = "0.1.0"
authors = ["Lars Wrenger <lars@wrenger.net>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.6", features = ["fullstack", "logger"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
tracing = "0.1"

# Web only
gloo-timers = { version="0.3", features = ["futures"], optional = true }

# Server only
axum = { version = "0.7", optional = true, default-features = false, features = [
    "json",
    "query",
    "tokio",
    "tower-log",
    "tracing",
] }
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
], optional = true }
dioxus-cli-config = { version = "0.6", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
web = [
    "dioxus/web",
    "dep:gloo-timers",
]
server = [
    "dioxus/server",
    "dep:dioxus-cli-config",
    "dep:axum",
    "dep:libc",
    "dep:clap",
    "tokio/rt-multi-thread",
    "tokio/fs",
]

[profile]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
